Alignment issue

--- a/webapp/static/main.css
+++ b/webapp/static/main.css
@@ -131,7 +131,7 @@ a {
 
 .main__showcase {
   width: 100vw;
-  height: 82vh;
+  height: 60vh;
   padding: 0 1rem;
   color: #ffffff;
   display: -ms-grid;
